--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - 'config/**/*'
+    - 'node_modules/**/*'
+    - 'spec/**/*'
 
 Layout/LineLength:
   Max: 99
