Connect redis in initializer

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,3 +40,7 @@ Style/ClassAndModuleChildren:
 
 Style/FormatStringToken:
   Enabled: false
+
+Style/GlobalVars:
+  AllowedVariables:
+    - $redis
